use svelte stores, and have a mostly bug free version, other bad whitespaces between punctuation in ReaderComponent

--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -56,6 +56,10 @@ body {
   .pointer {
     cursor: pointer;
   }
+
+  .clicked {
+    color: red;
+  }
   
   button {
     background-color: darkblue;
